# ZeroCodeNodes

./: .gitignore  CMakeLists.txt  README.md  autosave.zcn  build.bat  main.cpp  test.txt  vcpkg.json
add_me_to_the_list/: autosave.zcn  hb_list.txt
calculus/: autosave.zcn
deps_modyfications/: glfwpp_cmake_glfw_path.diff  imnodes_imgui_docking_branch_patch.diff
files/: Мой руский текст — копия (4).txt  Мой руский текст — копия (5).txt  Мой руский текст.txt
src/: ZCN_execute.hh  ZCN_execute_gui.hh  ZCN_node.hh  ZCN_node_draw.hh  ZCN_node_json.hh  ZCN_runtime_type.hh  execute.cc  node.cc  node_draw.cc  node_json.cc  runtime_type.cc
src/nodes/: Nodes.hh  node_compare_value.cc  node_context_file_input.cc  node_end.cc  node_execute_other.cc  node_file_read.cc  node_file_write.cc  node_float_input.cc  node_folder_read.cc  node_folder_write.cc  node_foreach_file.cc  node_input.cc  node_int_input.cc  node_loop.cc  node_math.cc  node_output.cc  node_question.cc  node_question_button.cc  node_string_compare.cc  node_string_concatination.cc  node_string_down.cc  node_string_find.cc  node_string_input.cc  node_string_length.cc  node_string_line_break.cc  node_string_regax.cc  node_string_replace.cc  node_string_slice.cc  node_string_up.cc  node_switch.cc  node_text_concatination.cc  node_text_input.cc  node_value_to_text.cc  nodes.cc
